setup server on 8080 and update config script

--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -1,16 +1,8 @@
 # PuZZleDucK server configuration
 
 server {
-	listen 80;
+	listen 80 default_server;
 	listen [::]:80;
-
-	# SSL configuration
-	# listen 443 ssl default_server;
-	# listen [::]:443 ssl default_server;
-	# Note: You should disable gzip for SSL traffic.
-	# See: https://bugs.debian.org/773332
-	# Read up on ssl_ciphers to ensure a secure configuration.
-	# See: https://bugs.debian.org/765782
 
 	root /var/www/puzzleduck.org/html;
 
