add alternative server block index

--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -4,7 +4,7 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	root /var/www/test.org/html;
+	root /var/www/puzzleduck.org/test-html;
 
 	index index.html index.htm index.nginx-debian.html index.php;
 
