--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -4,7 +4,7 @@ server {
 	listen 80;
 	server_name test.puzzleduck.org _;
 
-	location /sub/ {
+	location /sub {
 		root /var/www/puzzleduck.org/test-html/sub;
 		index index.html;
 	}
