--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -4,13 +4,13 @@ server {
 	listen 80;
 	server_name test.puzzleduck.org _;
 
-	location /sub {
-		root /var/www/puzzleduck.org/test-html/sub;
-		index index.html;
-	}
-
 	location / {
 		root /var/www/puzzleduck.org/test-html;
+		index index.html index.htm index.nginx-debian.html index.php;
+	}
+
+	location /sub/ {
+		root /var/www/puzzleduck.org/test-html/sub;
 		index index.html index.htm index.nginx-debian.html index.php;
 	}
 
