--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -2,7 +2,7 @@
 
 server {
 	listen 80;
-	server_name test.puzzleduck.org _;
+	server_name test.puzzleduck.org;
 
 	location /sub/ {
 		root /var/www/puzzleduck.org/test-html/sub;
