--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -11,7 +11,7 @@ server {
 
 	location /php/ {
 		root /var/www/puzzleduck.org/test-html;
-		index index.html index.htm index.nginx-debian.html index.php;
+		index index.php;
 	}
 
 	location / {
