--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -10,6 +10,9 @@ server {
 	}
 
 	location /php/ {
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+
 		root /var/www/puzzleduck.org/test-html;
 		index index.php;
 	}
