--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -20,4 +20,9 @@ server {
 		index index.html index.htm index.nginx-debian.html index.php;
 	}
 
+# cache images?
+#	location ~* \.(png|jpg|jpeg)$ {
+#		expires 10d;
+#	}
+
 }
