--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -24,7 +24,7 @@ server {
 
 	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	location ~ \.php$ {
-		include /etc/nginx/snippets/fastcgi-php.conf;
+		include snippets/fastcgi-php.conf;
 
 		# With php7.0-cgi alone:
 		# fastcgi_pass 127.0.0.1:9000;
