--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -10,7 +10,7 @@ server {
 	}
 
 	location /php/ {
-		include /etc/nginx/snippets/fastcgi-php.conf;
+		include snippets/fastcgi-php.conf;
 		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 
 		index index.php;
