--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -10,6 +10,10 @@ server {
 		autoindex on;            # auto generate file listing
 	}
 
+	location /sub/secrets/ {
+		deny all;
+	}
+
 	location /php/ {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
@@ -21,8 +25,8 @@ server {
 		index index.html index.htm index.nginx-debian.html index.php;
 	}
 
-	location /sub/secrets/ {
-		deny all;
+	location /pass/ {
+		proxy_pass http://127.0.0.1;
 	}
 
 # cache images?
