--- a/config/nginx/sites-available/test.org
+++ b/config/nginx/sites-available/test.org
@@ -23,12 +23,18 @@ server {
 		index index.php;
 	}
 
+	location /haskell/ {
+		fastcgi_pass unix:/var/www/puzzleduck.org/test-html/haskell/haskell.fcgi;
+
+		index index.hs;
+	}
+
 	location / {
 		index index.html index.htm index.nginx-debian.html index.php;
 	}
 
 	location /pass/ {
-		proxy_pass http://127.0.0.1;
+		proxy_pass http://127.0.0.1:8080;
 	}
 
 # cache images?
