--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -32,6 +32,11 @@ server {
 		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 	}
 
+	# cache images?
+	location ~* \.(png|jpg|jpeg)$ {
+		expires 10d;
+	}
+
 	# deny access to .htaccess files, if Apache's document root
 	# concurs with nginx's one
 	#
