--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -22,14 +22,11 @@ server {
           root /usr/share/nginx/html;
         }
 
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	location ~ \.php$ {
+	location /php/ {
 		include snippets/fastcgi-php.conf;
-
-		# With php7.0-cgi alone:
-		# fastcgi_pass 127.0.0.1:9000;
-		# With php7.0-fpm:
 		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
+
+		index index.php;
 	}
 
 	# cache images, css and fonts
