--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -22,11 +22,14 @@ server {
           root /usr/share/nginx/html;
         }
 
-	location /php/ {
+	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 
-		index index.php;
+		# With php7.0-cgi alone:
+		# fastcgi_pass 127.0.0.1:9000;
+		# With php7.0-fpm:
+		fastcgi_pass unix:/run/php/php7.0-fpm.sock;
 	}
 
 	# cache images, css and fonts
