--- a/config/nginx/sites-available/puzzleduck.org
+++ b/config/nginx/sites-available/puzzleduck.org
@@ -9,7 +9,7 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.html index.htm index.nginx-debian.html index.php;
 
-	server_name puzzleduck.org _;
+	server_name puzzleduck.org www.puzzleduck.org _;
 
 	#location / {
 	#	# First attempt to serve request as file, then
